# launchcontainers

./: .gitignore  .pre-commit-config.yaml  Claude.md  README.md  createSymLinks.py  pyproject.toml  qsub_generic.py  qsub_generic.sh  requirements.txt  rtp_pipeline.py  runSingularity.sh  test_json.ipynb  tmp.py
src/launchcontainers/py_pipeline/: helper_dipc.txt  l1_glm.py  pyproject.toml
src/launchcontainers/py_pipeline/00_dicom_to_nifti/: QA_check_json.py  createSubSesList_Dicoms.sh  create_subseslist.sh  gen_subseslist.py  gen_subseslist_from_dicom_folder.py  get_folder_depth.py  local_heudiconv.sh  local_heudiconv_serial.sh  prepare_dicom_folder.py  qsub_heurdiconv.sh  src_heudiconv_step1.sh  src_heudiconv_step1_votcloc.sh  src_heudiconv_step2.sh  src_heudiconv_step2_votcloc.sh  subseslist_Jan27.txt  subseslist_votcloc.txt  subseslist_votcloc_copy.txt
src/launchcontainers/py_pipeline/00_dicom_to_nifti/heuristic/: heuristic_BCBL.py  heuristic_test.py  heuristic_votcloc.py
src/launchcontainers/py_pipeline/00_dicom_to_nifti/run_ips/: qsub_heurdiconv.sh
src/launchcontainers/py_pipeline/00_dicom_to_nifti/run_local/: local_heudiconv.sh
src/launchcontainers/py_pipeline/01_prepare_nifti/: subses_List2.txt
src/launchcontainers/py_pipeline/01_prepare_nifti/prepare_anat/: local_presurfer.sh  presurferT1.m  qsub_presurfer.sh  run_presurfer.sh  subses_List.txt  subseslist_votcloc_copy.txt
src/launchcontainers/py_pipeline/01_prepare_nifti/prepare_dwi/: nordic_dwi.m  nordic_dwi_JP.m
src/launchcontainers/py_pipeline/01_prepare_nifti/prepare_fmap/: 01_prepare_fmap_folder.py  02_auto_gen_intendedfor.py  auto_gen_intendedfor.py  fmap_template  prepare_fmap_folder.py  subses_List.txt  subseslist_votcloc.txt
src/launchcontainers/py_pipeline/01_prepare_nifti/prepare_func/: nordic_fmri.m  prepare_nordic_bold_nifti.m  subses_List.txt  subseslist_votcloc.txt
src/launchcontainers/py_pipeline/02_freesurfer/: batchFSAnnotation2label.sh  batchFSlabel2label.sh  batchFreeviewOverlay.sh  batch_mri_mergelabel.sh  run_recon-all.sh
src/launchcontainers/py_pipeline/03_fmriprep/: bids_filter.json  export_html.py  fix_bold_mask.py  fix_bold_mask.sh  flip_orient.py  fmriprep.sh  fmriprep_final.sh  fmriprep_minimal.sh  summary_orien.py  typer_summary_orien.py
src/launchcontainers/py_pipeline/03_fmriprep/debug_fmriprep/: fix_bold_mask.py  fix_bold_mask.sh  flip_orient.py
src/launchcontainers/py_pipeline/03_fmriprep/run_dipc/: fmriprep.slurm  launch_fmriprep_slurm.sh  salloc_fmriprep.sh  salloc_fmriprep_final.sh  salloc_fmriprep_minimal.sh  (+1 more)
src/launchcontainers/py_pipeline/04_surface_glm/: 02_read_lab_note.py  0_prepare_bids_events_file.py  0_transfer_SPMonset_to_BIDSeventTSV.py  1_smooth_bold.sh  2_qsub_glm_floc.sh  2_qsub_smooth_bold.sh  2_serial_smooth_bold.sh  2_smooth_timeseries_1sub.sh  3_send_fsnative_to_fsaverage.sh  3_send_labelfsnative_to_fsaverage.sh  7_average_fsnative.py  create_wang_label.py  gen_subseslist.py  run_python_glm.sh  run_python_glm_floc.sh  subseslist_sub05.tsv  subseslist_tama.tsv  subseslist_test.tsv
src/launchcontainers/py_pipeline/04b_prf/: 04_prfprepare.sh  05_prfanalyze-vista.sh  06_prfresult.sh  analysis_description.txt  check_prfanalyze_log.py  gen_subses_json.py  notes_to_runprf.txt  prfanalyze-vista.json  prfanalyze-vista.sh  prfprepare.json  prfprepare.sh  prfreport.json  prfresult.sh  qsub_05_prfanalyze.sh  qsub_prfpipeline.sh  subseslist_votcloc.txt  subseslist_votcloc_copy.txt
src/launchcontainers/py_pipeline/QA/: 05_check_statsmaps.py
src/launchcontainers/py_pipeline/QC/: 05_check_statsmaps.py  qc_rtp2pipeline_output.py  qc_rtp2preproc_output.py
src/launchcontainers/py_pipeline/generate_statsmaps/: batch_freeview_load_and_check.sh  batch_freeview_snapshot.sh  batch_smooth_surface.sh  froi_thresh_surface.sh  plot_on_surface.py  qsub_mini_smoothing.sh  tmap_surf2surf.m
src/launchcontainers/py_pipeline/utils/: mask_surf_use_label.m  setup_logger.py
(+542 files in other folders)
