[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "launchcontainers"
version = "0.4.10"
description = "Launch Containers Package"
authors = [
    "Garikoitz Lerma-Usabiaga",
    "Leandro Lecca",
    "Mengxing Liu",
    "Yongning Lei"
]
# Acknowledgments
# I would like to thank Iñigo Tellaetxe from CompNeuroLabBilbao for his help on packaging this repository

maintainers = ["Garikoitz Lerma-Usabiaga", "Yongning Lei"]
readme = "README.md"
repository = "https://github.com/garikoitz/launchcontainers"
license = "MIT"
keywords = ["HPC", "MRI", "RTP2", "DWI", "dMRI"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{ include = "launchcontainers", from = "src" }]

[tool.poetry.scripts]
launchcontainers = "launchcontainers.launch:main"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
bids = "*"
pybids = "^0.16.1"
nibabel = "^5.1.0"
numpy = "^1.23.5"
pandas = "^1.5.3"
scipy = "^1.11.4"
PyYAML = "^6.0.1"
coverage-conditional-plugin = "^0.7.0"
Cython = "==3.0.10"
dask = "==2024.5.2"
dask-jobqueue = "==0.8.5"
gdist = "==2.1.0"
matplotlib = "==3.9.0"
nilearn = "==0.10.4"
packaging = "==24.0"
plotly = "==5.22.0"
requests = "==2.32.3"
scikit-learn = "==1.5.0"

[tool.poetry.dev-dependencies]
nox-poetry = "*"
# Testing
pytest = "*"
pytest-cov = "*"
coverage_conditional_plugin = "*"
# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"
# Formatting
black = { version = "^23.1a1", allow-prereleases = true}