[tool.poetry]
name = "mriworkflow"
version = "0.1.0"
description = "This package is used for conduct fMRIprep routine surface-based fMRI analysis, currently is is implemented for doing the fROI automizing drawing, in the future, more group analysis will be added."
authors = ["Yongning (Tiger) Lei tlei@bcbl.eu"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
